--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -92,8 +92,8 @@
             <div id="lessons" class="row"
                  style="background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem; margin-bottom: 30px">
                 <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
-                    <h5 id="miniCourseName" style=";margin-bottom: 7px; color: #444; font-weight: 500"><br></h5>
-                    <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
+                    <h5 id="miniCourseName" style="font-size: 18px;margin-bottom: 7px; color: #444; font-weight: 500"><br></h5>
+                    <p style="font-size: 12px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
                         <span id="noOfLessons" style="margin-top: 5px; font-weight: 500"></span>&nbsp;&nbsp;
                         <span id="miniCourseDuration" style="margin-top: 5px; font-weight: 500"></span>
                     </p>
@@ -118,9 +118,9 @@
                 <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
                     <div class="row" style="margin-bottom: 0px">
                         <div class="col-sm-8">
-                            <h5 id="nameOfTheMiniCourse" style=";margin-bottom: 7px; color: #444; font-weight: 500"><br>
+                            <h5 id="nameOfTheMiniCourse" style="font-size: 18px;margin-bottom: 7px; color: #444; font-weight: 500"><br>
                             </h5>
-                            <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
+                            <p style="font-size: 12px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
                                 <img src="/images/icons/timer.png">&nbsp;<span id="durationOfMiniCourse"
                                                                                style="margin-top: 5px; font-weight: 500"></span>&nbsp;&nbsp;
                                 <img src="/images/icons/eye.png">&nbsp;<span id="lessonViews"
@@ -131,10 +131,14 @@
                                style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
 
                             </p></div>
-                        <div class="col-sm-4 text-center" style="padding-top: 30px;">
+                        <div class="col-sm-4 text-center" style="">
+                            <div style="height: 50px; margin-bottom: 15px">
+                                <img src="/images/thumb-up-gray.png"> <span style="font-size: 13px;font-weight: 500;margin-bottom: 0px;color: #A4A5A9">Upvote</span>
+                                <img src="/images/report.png"> <span style="font-size: 13px;font-weight: 500;margin-bottom: 0px;color: #A4A5A9">Report</span>
+                            </div>
                             <a id="bookmark" class="btn btn-success text-uppercase"
                                style="background-color:#4bca81;padding: 10px 45px;color: white;font-size: 12px;font-weight: 700;cursor: pointer;width: auto;border-radius: 100px">BOOKMARK</a>
-                            <p id="msg" style="padding-top: 10px;margin-bottom: 6px;"></p>
+                            <p id="msg" style="padding-top: 5px;margin-bottom: 3px;font-size: 14px"></p>
                         </div>
                     </div>
                 </div>
@@ -144,7 +148,7 @@
                         <div class="col-sm-12">
                             <p><b>Teacher</b></p></div>
                         <div class="col-sm-2">
-                            <img id="teacherImage" alt="Tutor Image" src="/images/icons/tutor.png">
+                            <img id="teacherImage" style="border-radius: 50%; height: 75px" alt="Tutor Image" src="/images/user-image.jpg">
                         </div>
                         <div class="col-sm-10">
                             <p style="color: #848589;font-size: 14px;"><b><span id="nameOfTheTeacher"></span></b><br>
