--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -29,6 +29,52 @@
     </script>
 </head>
 <body>
+
+<div class="modal fade" id="reportModal" tabindex="-1" role="dialog" aria-labelledby="Report Modal" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" style="margin: 0 auto">Report A Bug</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <textarea id="report-description" rows="4" style="width: 100%;resize: none;padding: 5px" placeholder="Tell us about your issue."></textarea>
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <a id="submit-report" class="btn btn-success text-uppercase"
+                   style="background-color:#4bca81;padding: 10px 45px;color: white;font-size: 12px;font-weight:
+                    700;cursor: pointer;width: auto;border-radius: 100px">Submit</a>
+
+                <!--<button type="button" class="btn btn-primary">Submit</button>-->
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="reportSubmitModal" tabindex="-1" role="dialog" aria-labelledby="Report Submit Modal" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modtrueal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="margin-left: auto">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p id="submit-report-msg">Thank you for helping us improve.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <div class="container-fluid">
 
     <div class="row no-gutters align-content-center headerbar" id="headerbar"
