--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -67,7 +67,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="reviewSubmitModal" tabindex="-1" role="dialog" aria-labelledby="Review SSubmit Modal" aria-hidden="true">
+<div class="modal fade" id="reviewSubmitModal" tabindex="-1" role="dialog" aria-labelledby="Review Submit Modal" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
