--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -37,8 +37,8 @@
 <div class="modal fade" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="Review Modal" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" style="margin: 0 auto">Add Your Review</h5>
+            <div class="modal-header" style="border: none">
+                <h5 class="modal-title" style="margin: 0 auto; font-size: 18px">Add Your Review</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -46,7 +46,7 @@
             <div class="modal-body">
                 <div class="row" style="padding:0px 15px">
                     <div id="jRate-add-review"></div>
-                    <span style="padding-top: 5px;margin-left: 10px" id="review-type">Very Good</span>
+                    <span style="padding-top: 5px;margin-left: 10px; color:  #1589EE" id="review-type">Very Good</span>
                 </div>
                 <br>
                 <div class="row">
@@ -56,7 +56,7 @@
                 </div>
 
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer" style="border: none">
                 <a id="submit-review" class="btn btn-success text-uppercase"
                    style="background-color:#4bca81;padding: 10px 45px;color: white;font-size: 12px;font-weight:
                     700;cursor: pointer;width: auto;border-radius: 100px">Submit</a>
