--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -39,7 +39,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="report-modal-body">
                 <div class="row">
                     <div class="col-sm-12">
                         <textarea id="report-description" rows="4" style="width: 100%;resize: none;padding: 5px" placeholder="Tell us about your issue."></textarea>
@@ -60,8 +60,9 @@
 
 <div class="modal fade" id="reportSubmitModal" tabindex="-1" role="dialog" aria-labelledby="Report Submit Modal" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modtrueal-content">
+        <div class="modal-content">
             <div class="modal-header">
+                <h5 class="modal-title" style="margin: 0 auto">Report A Bug</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="margin-left: auto">
                     <span aria-hidden="true">&times;</span>
                 </button>
