--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -139,7 +139,7 @@
             <div id="lessons" class="row"
                  style="background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem; margin-bottom: 30px">
                 <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
-                    <h5 id="miniCourseName" style="font-size: 18px;margin-bottom: 7px; color: #444; font-weight: 500"><br></h5>
+                    <h5 id="miniCourseName" style="font-size: 18px;margin-bottom: 7px; color: #444; font-weight: 500; cursor: pointer"><br></h5>
                     <p style="font-size: 12px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
                         <span id="noOfLessons" style="margin-top: 5px; font-weight: 500"></span>&nbsp;&nbsp;
                         <span id="miniCourseDuration" style="margin-top: 5px; font-weight: 500"></span>
