--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -158,7 +158,7 @@
                  style="padding: 20px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
                 <div class="col-sm-2 text-center">
                     <p><b>TEACHER</b></p>
-                    <img src="/images/user-image.jpg" style="border-radius: 50%; height: 30px">
+                    <img id="teacher-img" src="/images/user-image.jpg" style="border-radius: 50%; height: 30px">
                     <span id="teacherName"></span>
                 </div>
                 <div class="col text-center">
